--- a/src/index.html
+++ b/src/index.html
@@ -6,41 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="./calculator.css">
-    <script src="./calculator.js" defer></script>
+    <script type="module" src="./calculator.js" defer></script>
 </head>
 <body>
-    <h1 class="page-title">Calculator</h1>
-    <div class="calc">
-        <div class="calc-row">
-            <div class="output">0</div>
+    <div id="container">
+        <header></header>
+        <div class="calc">
+            <div class="calc-row">
+                <div class="output">0</div>
+            </div>
+            <div class="calc-row">
+                <button class="btn xl-btn" value="clear">C</button>
+                <button class="btn" value="back">⌫</button>
+                <button class="btn" value="divide">÷</button>
+            </div>
+            <div class="calc-row">
+                <button class="btn" value="7">7</button>
+                <button class="btn" value="8">8</button>
+                <button class="btn" value="9">9</button>
+                <button class="btn" value="multiply">⨉</button>
+            </div>
+            <div class="calc-row">
+                <button class="btn" value="4">4</button>
+                <button class="btn" value="5">5</button>
+                <button class="btn" value="6">6</button>
+                <button class="btn" value="subtract">–</button>
+            </div>
+            <div class="calc-row">
+                <button class="btn" value="1">1</button>
+                <button class="btn" value="2">2</button>
+                <button class="btn" value="3">3</button>
+                <button class="btn" value="add">+</button>
+            </div>
+            <div class="calc-row">
+                <button class="btn xxl-btn" value="0">0</button>
+                <button class="btn" value="equals">=</button>
+            </div>
         </div>
-        <div class="calc-row">
-            <button class="btn xl-btn" value="clear">C</button>
-            <button class="btn" value="back">←</button>
-            <button class="btn" value="divide">÷</button>
-        </div>
-        <div class="calc-row">
-            <button class="btn" value="7">7</button>
-            <button class="btn" value="8">8</button>
-            <button class="btn" value="9">9</button>
-            <button class="btn" value="multiply">⨉</button>
-        </div>
-        <div class="calc-row">
-            <button class="btn" value="4">4</button>
-            <button class="btn" value="5">5</button>
-            <button class="btn" value="6">6</button>
-            <button class="btn" value="subtract">-</button>
-        </div>
-        <div class="calc-row">
-            <button class="btn" value="1">1</button>
-            <button class="btn" value="2">2</button>
-            <button class="btn" value="3">3</button>
-            <button class="btn" value="add">+</button>
-        </div>
-        <div class="calc-row">
-            <button class="btn xxl-btn" value="0">0</button>
-            <button class="btn" value="equals">=</button>
-        </div>
+        <footer>
+            <a href="https://github.com/SindreBeba" class="github-link">Sindre Beba <img src="../images/github.png" alt="github logo" class="github-logo" /></a>
+        </footer>
     </div>
 </body>
 </html>
