Fixed formatting for mobile, #10

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <footer>
-            <a href="https://github.com/SindreBeba" class="github-link">Sindre Beba <img src="../images/github.png" alt="github logo" class="github-logo" /></a>
+            <a href="https://github.com/SindreBeba" class="github-link">Sindre Beba <img src="../assets/github.png" alt="github logo" class="github-logo" /></a>
         </footer>
     </div>
 </body>
