Added support for decimal numbers, fixes #1

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,8 @@
                 <button class="btn" value="add">+</button>
             </div>
             <div class="calc-row">
-                <button class="btn xxl-btn" value="0">0</button>
+                <button class="btn xl-btn" value="0">0</button>
+                <button class="btn" value="decimal">.</button>
                 <button class="btn" value="equals">=</button>
             </div>
         </div>
