Added previous operation to the display, fixes #9

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
         <header></header>
         <div class="calc">
             <div class="calc-row">
-                <div class="output">0</div>
+                <div class="output">
+                    <div class="operation"></div>
+                    <div class="result">0</div>
+                </div>
             </div>
             <div class="calc-row">
                 <button class="btn xl-btn" value="clear">C</button>
@@ -24,7 +27,7 @@
                 <button class="btn" value="7">7</button>
                 <button class="btn" value="8">8</button>
                 <button class="btn" value="9">9</button>
-                <button class="btn" value="multiply">⨉</button>
+                <button class="btn" value="multiply">×</button>
             </div>
             <div class="calc-row">
                 <button class="btn" value="4">4</button>
