--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="icon" type="image/png" href="../assets/favicon.png" />
-    <link rel="stylesheet" href="./calculator.css">
+    <link rel="stylesheet" href="./calculator.scss">
     <script type="module" src="./calculator.js" defer></script>
 </head>
 <body>
     <div id="container">
-        <header></header>
+        <header class="site-header">
+            <a href="https://sindrebeba.no" class="header-link">sindrebeba.no</a>
+            <a href="https://github.com/SindreBeba"><img src="../assets/github.png" alt="github logo" class="github-logo" /></a>
+        </header>
         <div class="calc">
             <div class="calc-row">
                 <div class="output">
@@ -20,7 +23,7 @@
                 </div>
             </div>
             <div class="calc-row">
-                <button class="btn xl-btn" value="clear">C</button>
+                <button class="btn btn-xl" value="clear">C</button>
                 <button class="btn" value="back">⌫</button>
                 <button class="btn" value="divide">÷</button>
             </div>
@@ -43,14 +46,12 @@
                 <button class="btn" value="add">+</button>
             </div>
             <div class="calc-row">
-                <button class="btn xl-btn" value="0">0</button>
+                <button class="btn btn-xl" value="0">0</button>
                 <button class="btn" value="decimal">.</button>
                 <button class="btn" value="equals">=</button>
             </div>
         </div>
-        <footer>
-            <a href="https://github.com/SindreBeba" class="github-link">Sindre Beba <img src="../assets/github.png" alt="github logo" class="github-logo" /></a>
-        </footer>
+        <footer></footer>
     </div>
 </body>
 </html>
