Added dark mode, fixes #4

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,15 @@
     <div id="container">
         <header class="site-header">
             <a href="https://sindrebeba.no" class="header-link">sindrebeba.no</a>
-            <a href="https://github.com/SindreBeba"><img src="../assets/github.png" alt="github logo" class="github-logo" /></a>
+            <div class="header-icons">
+                <a href="https://github.com/SindreBeba"><img src="../assets/github.png" alt="github logo" class="github-logo" /></a>
+                <button id="dark-mode-toggle"><img src="../assets/moon.svg" alt="moon icon" class="moon-icon" /></a>
+            </div>
         </header>
         <div class="calc">
             <div class="calc-row">
                 <div class="output">
-                    <div class="operation"></div>
+                    <div class="operation"> </div>
                     <div class="result">0</div>
                 </div>
             </div>
