Added sign button, fixes #3

--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,9 @@
                 <button class="btn" value="add">+</button>
             </div>
             <div class="calc-row">
-                <button class="btn btn-xl" value="0">0</button>
+                <button class="btn" value="0">0</button>
                 <button class="btn" value="decimal">.</button>
+                <button class="btn" value="sign">+/-</button>
                 <button class="btn" value="equals">=</button>
             </div>
         </div>
