Added memory buttons, fixes #6

--- a/src/index.html
+++ b/src/index.html
@@ -26,33 +26,39 @@
                 </div>
             </div>
             <div class="calc-row">
-                <button class="btn btn-xl" value="clear">C</button>
-                <button class="btn" value="back">⌫</button>
-                <button class="btn" value="divide">÷</button>
+                <button class="btn btn-xl btn-red" value="clear">C</button>
+                <button class="btn btn-alt" value="back">⌫</button>
+                <button class="btn btn-alt" value="sign">+/-</button>
+            </div>
+            <div class="calc-row">
+                <button class="btn btn-alt" value="memory-clear">MC</button>
+                <button class="btn btn-alt" value="memory-recall">MR</button>
+                <button class="btn btn-alt" value="memory-plus">M+</button>
+                <button class="btn btn-alt" value="memory-minus">M-</button>
             </div>
             <div class="calc-row">
                 <button class="btn" value="7">7</button>
                 <button class="btn" value="8">8</button>
                 <button class="btn" value="9">9</button>
-                <button class="btn" value="multiply">×</button>
+                <button class="btn btn-alt" value="divide">÷</button>
             </div>
             <div class="calc-row">
                 <button class="btn" value="4">4</button>
                 <button class="btn" value="5">5</button>
                 <button class="btn" value="6">6</button>
-                <button class="btn" value="subtract">–</button>
+                <button class="btn btn-alt" value="multiply">×</button>
             </div>
             <div class="calc-row">
                 <button class="btn" value="1">1</button>
                 <button class="btn" value="2">2</button>
                 <button class="btn" value="3">3</button>
-                <button class="btn" value="add">+</button>
+                <button class="btn btn-alt" value="subtract">–</button>
             </div>
             <div class="calc-row">
                 <button class="btn" value="0">0</button>
-                <button class="btn" value="decimal">.</button>
-                <button class="btn" value="sign">+/-</button>
-                <button class="btn" value="equals">=</button>
+                <button class="btn btn-alt" value="decimal">.</button>
+                <button class="btn btn-alt" value="equals">=</button>
+                <button class="btn btn-alt" value="add">+</button>
             </div>
         </div>
         <footer></footer>
